--- a/index.html
+++ b/index.html
@@ -76,7 +76,28 @@
             <h4>Las 10 series mas populares en Argentina hoy</h4>
             <img src="vid/slider-top10.png" alt="slider">
           </div>
-          <div class="pelis" id="pelis">
+          <div class="pelis-titulo">
+            <h4>Tendencias</h4>
+          </div>
+          <div class="pelis" id="pelisTendencia">
+
+          </div>
+          <div class="pelis-titulo">
+            <h4>Recomendaciones</h4>
+          </div>
+          <div class="pelis" id="pelisRecomendaciones">
+
+          </div>
+          <div class="pelis-titulo">
+            <h4>Dramas</h4>
+          </div>
+          <div class="pelis" id="pelisDrama">
+
+          </div>
+          <div class="pelis-titulo">
+            <h4>Comedias</h4>
+          </div>
+          <div class="pelis" id="pelisComedia">
 
           </div>
         </div>
